tests/reference/run-array_bounds_check_15-9f619ed.stderr
runtime error: Argument 1 is unallocated.
 --> tests/errors/array_bounds_check_15.f90:6:14
  |
6 |     print *, x
  |              ^ This is unallocated
